changes in auth controller
